--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <link href="https://fonts.googleapis.com/css?family=Rubik|DM+Sans&display=swap"
             rel="stylesheet" type='text/css'>
         <!-- main CSS -->
-        <link href="css/main.css" rel="stylesheet">
+        <link href="main.css" rel="stylesheet">
 
         
         <!--jQuery JS-->
@@ -47,7 +47,7 @@
         <!--Bootstrap JS-->
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
         <!-- main JS -->
-        <script src="js/main.js"></script>
+        <script src="main.js"></script>
 
     </head>
 
