--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="col-lg-2" style="text-align:center;">
                         <!-- About Image -->
                         <img class="header-img .img-fluid"
-                            src="assets/professional-me.jpg">
+                            src="professional-me.jpg">
                     </div>
                     <div class="col-lg-8">
                         <!-- About Description -->
@@ -107,7 +107,7 @@
                     </div>
                     <div class="col-lg-2" style="display:flex; justify-content:center;">
                         <!-- Résumé Link--> 
-                        <p><a href="assets/my-resume.pdf" target="_blank"> 
+                        <p><a href="my-resume.pdf" target="_blank"> 
                         <i id="resume" class="fas fa-file-alt"></i> 
                         <br/> 
                         <strong>RESUME</strong> 
@@ -489,7 +489,7 @@
                         center">
                         <!-- Contact Heading-->
                         <h5 class="subheading">CONTACT ME</h5>
-                        <img class="footer-img" src="assets/casual-me.jpg">
+                        <img class="footer-img" src="casual-me.jpg">
                     </div>
 
                     <div class="col-lg-6">
