--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <!-- Header Name -->
                         <h1 id="heading-name">JANARTHANAN S</h1>
                         <!-- Header Description-->
-                        <h3 id="heading-desc">FRONT-END DEVELOPER</h3>
+                        <h3 id="heading-desc">ASPIRING TECHIE</h3>
                     </div>
                 </div>
             </div>
