--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <!--OpenGraph Description-->
         <meta property="og:description" content="Janarthanan S" />
         <!-- Webpage Title -->
-        <titl, Janarthanan</title>
+        <title> Janarthanan</title>
         <!-- Add the favicon link here -->
-        <link rel="icon" type="image/x-icon" href="favicon_1.ico">
+        <link rel="icon" href="favicon_1.ico">
 
         <!-- Bootstrap Core CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
