--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- Webpage Title -->
         <title> Janarthanan</title>
         <!-- Add the favicon link here -->
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="favicon_1.ico">
 
         <!-- Bootstrap Core CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
