--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <p style="line-height: 125%">
                             <sm>2021 - 2025</sm>
                             <br />
-                            <sm>8.22 CGPA</sm>
+                            <sm><b>CGPA :</b> 8.23</sm>
                         </p>
                     </p>
                 </div>
@@ -172,7 +172,7 @@
                     <p>
                         <t>HSC</t>
                         <br />
-                        Mathematics andComputer Science
+                        Mathematics and Computer Science
                         <br />
                         Golden Choice Matriculation Higher Secondary School
                     </p>
@@ -186,7 +186,7 @@
                         <p style="line-height: 125%;">
                             <sm>2019 - 2021</sm>
                             <br />
-                            <sm>Grade 10: 86.0% | Grade 12: 86.69%</sm>
+                            <sm><b>Grade 10:</b> 86.0% | <b>Grade 12:</b> 86.69%</sm>
                         </p>
                     </p>
                 </div>
